# siyuan-mcp-server

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cliff.toml  pyproject.toml  siyuan_client.py  siyuan_mcp_server.py  tools.py
.github/workflows/: github-release.yml  publish.yml  release.yml
dev doc/: TODO.md  开发规范.md
doc/: siyuan_data_structure.md
src/siyuan_mcp_server/: __init__.py
