[project]
name = "siyuan-mcp-server"
version = "0.1.0"
description = "思源笔记 MCP Server - 提供思源笔记API的MCP工具接口"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
siyuan-mcp-server = "siyuan_mcp_server:main"