[project]
name = "siyuan-mcp-server"
version = "0.1.0"
description = "思源笔记 MCP Server - 提供思源笔记API的MCP工具接口"
authors = [
    { name = "leolulu", email = "348699103@qq.com" }
]
license = { text = "MIT" }
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "requests",
    "detect-secrets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
siyuan-mcp-server = "siyuan_mcp_server:main"